[gd_scene load_steps=13 format=3 uid="uid://xqyt5cm8sigv"]

[ext_resource type="Theme" uid="uid://b50x7qvv4laqd" path="res://visual/UI/ui.tres" id="1_aw7sc"]
[ext_resource type="Script" path="res://scripts/UI/MainMenu.gd" id="1_kbsxm"]
[ext_resource type="AudioStream" uid="uid://dtftrd4polvve" path="res://audio/Caution_The_bread_is_hot.wav" id="2_cab1f"]
[ext_resource type="Texture2D" uid="uid://vreytse75mbn" path="res://visual/legacy/bread_128.png" id="3_6o37r"]
[ext_resource type="Texture2D" uid="uid://cyw8soms2x0h0" path="res://visual/legacy/bread.bmp" id="4_q78hb"]
[ext_resource type="Texture2D" uid="uid://d35rgdskr7i23" path="res://visual/sprites/toast.png" id="7_658p8"]
[ext_resource type="PackedScene" path="res://scenes/options.tscn" id="9_ccilo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2uaf"]
size = Vector2(92.25, 85.375)

[sub_resource type="Animation" id="Animation_2mtst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_7h3es"]
resource_name = "bread_consume"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_v43t8"]
resource_name = "bread_launch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(1, 0), Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_774qp"]
_data = {
"RESET": SubResource("Animation_2mtst"),
"bread_consume": SubResource("Animation_7h3es"),
"bread_launch": SubResource("Animation_v43t8")
}

[node name="MainMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_aw7sc")
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120
script = ExtResource("1_kbsxm")

[node name="Background" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1032, 50)
stream = ExtResource("2_cab1f")
autoplay = true
bus = &"Music"

[node name="Main" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="Main"]
layout_mode = 2

[node name="Bread" type="RigidBody2D" parent="Main/Container"]
lock_rotation = true
freeze = true

[node name="BreadSprite" type="Sprite2D" parent="Main/Container/Bread"]
position = Vector2(44, -67)
scale = Vector2(0.155831, 0.147617)
texture = ExtResource("4_q78hb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main/Container/Bread"]
position = Vector2(43, -66)
shape = SubResource("RectangleShape2D_b2uaf")

[node name="Title" type="TextureRect" parent="Main/Container"]
visible = false
layout_mode = 2
texture = ExtResource("3_6o37r")
stretch_mode = 2

[node name="Play" type="Button" parent="Main/Container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="Main/Container"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Main/Container"]
layout_mode = 2
text = "Quit"

[node name="Version" type="Label" parent="Main/Container"]
layout_mode = 2
text = "bred team"

[node name="Settings" type="CanvasLayer" parent="."]
offset = Vector2(45, 20)
transform = Transform2D(1, 0, 0, 1, 45, 20)
follow_viewport_enabled = true

[node name="Settings" type="VBoxContainer" parent="Settings"]
offset_left = 425.0
offset_top = 226.0
offset_right = 486.0
offset_bottom = 261.0
alignment = 1

[node name="Return" type="Button" parent="Settings/Settings"]
layout_mode = 2
text = "Return"

[node name="Options" parent="Settings/Settings" instance=ExtResource("9_ccilo")]
layout_mode = 2

[node name="Toaster" type="Node2D" parent="."]
z_index = 1
position = Vector2(555, 558)

[node name="Sprite2D" type="Sprite2D" parent="Toaster"]
position = Vector2(-385, 60)
scale = Vector2(0.147481, 0.147481)
texture = ExtResource("7_658p8")
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Toaster"]
libraries = {
"": SubResource("AnimationLibrary_774qp")
}

[connection signal="pressed" from="Main/Container/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/Container/Options" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/Container/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/Settings/Return" to="." method="_on_return_pressed"]
